dreamkast-api-mock/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dreamkast-api-mock-ingress
  namespace: dreamkast-api-mock
  annotations:
    kubernetes.io/ingress.class: contour
  labels:
    app: dreamkast-api-mock
spec:
  rules:
    - host: dreamkast-api-mock.udcp.info
      http:
        paths:
          - path: /
            backend:
              serviceName: "dreamkast-api-mock"
              servicePort: 8080
